--- a/crm/accounts/templates/accounts/Dashboard.html
+++ b/crm/accounts/templates/accounts/Dashboard.html
@@ -9,14 +9,15 @@
             <a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
             <table class="table table-sm">
                 <tr>
-
+                    <th></th>
                     <th>Customer</th>
                     <th>Ph no</th>
                 </tr>
-                {% for i in customers %}
+                {% for customer in customers %}
                 <tr>
-                    <td>{{i.name}}</td>
-                    <td>{{i.phone}}
+                    <td><a class="btn btn-primary btn-sm btn-block" href ="{% url 'customer' customer.id %}">view</a></td>
+                    <td>{{customer.name}}</td>
+                    <td>{{customer.phone}}
                     </td>
                 </tr>
                 {% endfor %}
@@ -25,8 +26,6 @@
     </div>
     <div class="col-md-7">
         <h5>CUSTOMERS:</h5>
-        <div class="card card-body">
-            <a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
@@ -35,13 +34,13 @@
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
-                {% for i in orders %}
+                {% for order in orders %}
                 <tr>
-                    <td>{{i.product}}</td>
-                    <td>{{i.date_created }}</td>
-                    <td>{{i.status}}</td>
-                    <td><a href="#">Update</a></td>
-                    <td><a href="#">Delete</a></td>
+                    <td>{{order.product}}</td>
+                    <td>{{order.date_created }}</td>
+                    <td>{{order.status}}</td>
+                    <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                    <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
                 </tr>
 
                 {% endfor%}
